FIXED the bug of overflowing in navbar
ADDED animation to projects section

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   transition: all .5s;
 } */
 
-body {
+body, html {
   overflow-x: hidden;
 }
 /* ------------------- SWITCH ICON ------------------------- */
